Added custom validator to the project

--- a/customer-form-validation-project/src/main/resources/templates/customer-confirmation.html
+++ b/customer-form-validation-project/src/main/resources/templates/customer-confirmation.html
@@ -19,5 +19,10 @@ Free passes: <span th:text="${customer.freePasses}"></span>
 <!-- Displaying the postal code of the customer -->
 Postal code: <span th:text="${customer.postalCode}"></span>
 
+<br><br>
+<!-- Displaying the course code of the customer -->
+Course code: <span th:text="${customer.courseCode}" />
+
+
 </body>
 </html>
