--- a/customer-form-validation-project/src/main/resources/templates/customer-form.html
+++ b/customer-form-validation-project/src/main/resources/templates/customer-form.html
@@ -53,6 +53,15 @@
 
     <br><br>
 
+    Course Code: <input type="text" th:field="*{courseCode}" />
+
+    <!-- Add error message (if present) -->
+    <span th:if="${#fields.hasErrors('courseCode')}"
+          th:errors="*{courseCode}"
+          class="error"></span>
+
+    <br><br>
+
     <!-- Submit button for the form -->
     <input type="submit" value="Submit" />
 
